# basic-paxos-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: test.yml
proto/: paxos.proto
src/: lib.rs  tests.rs
